# langman_tutorial

./: .gitignore  README.md  config.py  prepare_orm.py  pyproject.toml
server/: app.py  config.yaml  langman_orm.py  prepare_orm.py  util.py
