[tool.poetry]
name = "langman"
version = "0.1.0"
description = ""
authors = ["William Parker"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
SQLAlchemy = "^2.0.23"
Flask = "^3.0.0"
PyYAML = "^6.0.1"
psycopg2-binary = "^2.9.9"
flask-cors = "^4.0.0"
flask-restx = "^1.3.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
